brat/test/golden/imports/use-without-rename.brat.golden
Error in test/golden/imports/use-without-rename.brat@4:8-13
main = lib.x
       ^^^^^

  lib.x not found in (value) environment

