brat/test/golden/imports/use-without-rename.brat
import lib as X

main :: Nat
main = lib.x
